--- a/employes.css
+++ b/employes.css
@@ -29,10 +29,19 @@
   align-items: center;
   justify-content: center;
   gap: 5rem;
-  /* flex-wrap: wrap; */
+  flex-wrap: wrap;
   /* flex-direction: row; */
 }
 .ceo-words {
   width: 100%;
   text-align: center;
+}
+
+@media (max-width: 450px) {
+  .ceo-img {
+    width: 15rem;
+    height: 15rem;
+    border-radius: 50%;
+    margin-bottom: -5rem;
+  }
 }
