--- a/style.css
+++ b/style.css
@@ -335,6 +335,38 @@ body.dark-theme {
   width: 20rem;
   /* margin-left: 25rem; */
 }
+
+.long-line-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  text-align: center;
+  margin: auto;
+  position: absolute;
+  top: 38rem;
+  left: 3rem;
+  border: 2px solid gray;
+  padding: 1rem;
+  border-radius: 10%;
+  background-color: black;
+}
+.lone-line-details {
+  display: flex;
+  color: white;
+  font-weight: 800;
+  font-size: 1rem;
+  align-items: center;
+  justify-content: center;
+}
+
+.notice-details-wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  gap: 1rem;
+}
+
 /* ------------------------------------Popular------------------------------------------------ */
 
 .popular__container {
@@ -352,6 +384,7 @@ body.dark-theme {
 .popular__img {
   border-radius: 1rem;
   margin-bottom: 1rem;
+  /* width: 20rem !important; */
   /* object-fit: fill; */
 }
 .popular__data {
@@ -1277,6 +1310,33 @@ body.dark-theme {
 
   .swiper__client-msg::before {
     border-top-color: #ced3ff;
+  }
+
+  .long-line-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    text-align: center;
+    margin: auto;
+    position: absolute;
+    top: 46rem;
+    left: 48rem;
+    border: 2px solid gray;
+    padding: 1rem;
+    border-radius: 20%;
+    background-color: black;
+  }
+  .lone-line-details {
+    display: flex;
+    color: white;
+    font-weight: 800;
+    font-size: 1.25rem;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .swiper-wrapper-container {
+    display: flex;
   }
 }
 
