--- a/style.css
+++ b/style.css
@@ -344,17 +344,18 @@ body.dark-theme {
   margin: auto;
   position: absolute;
   top: 28rem;
-  left: 4rem;
-  border: 2px solid gray;
+  left: 6rem;
+  /* border: 2px solid gray; */
   padding: 0.5rem;
   border-radius: 10%;
-  background-color: black;
+  /* background-color: black; */
 }
 .lone-line-details {
   display: flex;
-  color: white;
+  /* color: white; */
+  color: var(--second-color);
   font-weight: 800;
-  font-size: 1rem;
+  font-size: 0.8rem;
   align-items: center;
   justify-content: center;
 }
@@ -1321,14 +1322,14 @@ body.dark-theme {
     position: absolute;
     top: 36rem;
     left: 48rem;
-    border: 2px solid gray;
+    /* border: 2px solid gray; */
     padding: 1rem;
     border-radius: 20%;
-    background-color: black;
+    /* background-color: black; */
   }
   .lone-line-details {
     display: flex;
-    color: white;
+    color: var(--second-color);
     font-weight: 800;
     font-size: 1.25rem;
     align-items: center;
