--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap");
-
+@import url("https://fonts.googleapis.com/css2?family=Architects+Daughter&family=Gloria+Hallelujah&family=Montserrat+Subrayada:wght@400;700&family=Permanent+Marker&display=swap");
 /*=============== VARIABLES CSS ===============*/
 :root {
   --header-height: 3.5rem;
@@ -220,6 +220,9 @@ button {
     display: none;
   }
 }
+.nav__button {
+  display: none;
+}
 
 /* Theme color change */
 .change-theme {
@@ -287,6 +290,15 @@ body.dark-theme {
   background-color: hsl(228, 4%, 35%);
 }
 
+.nav-logo {
+  display: flex;
+  align-items: center;
+  /* white-space: nowrap; */
+}
+.nav-logo img {
+  width: 5rem;
+}
+
 /* ------------------------------------Home------------------------------------------------ */
 
 .hero .video video {
@@ -300,7 +312,7 @@ body.dark-theme {
   top: 5%;
   left: 0;
   width: 100%;
-  height: 72vh;
+  height: 71vh;
   background: linear-gradient(
     0deg,
     rgba(19, 18, 18, 0.5) 0%,
@@ -310,8 +322,8 @@ body.dark-theme {
 
 .on-overlay {
   position: absolute;
-  left: 25%;
-  top: 23%;
+  left: 16%;
+  top: 30%;
 }
 
 .on-overlay .logo img {
@@ -326,7 +338,7 @@ body.dark-theme {
 .hero-content p {
   font-size: 2rem;
   /* font-weight: bold; */
-  font-family: "Roboto", sans-serif;
+  font-family: "Montserrat Subrayada", sans-serif;
   font-style: normal;
   margin: 2rem 0;
   color: white;
@@ -366,6 +378,69 @@ body.dark-theme {
   justify-content: center;
   flex-direction: column;
   gap: 1rem;
+}
+
+/* ------------------------------------boxes------------------------------------------------ */
+
+.boxes {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: auto;
+  width: 90%;
+  margin-top: 5rem;
+  background: rgba(255, 255, 255, 0.25);
+  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+  backdrop-filter: blur(11px);
+  -webkit-backdrop-filter: blur(11px);
+  border-radius: 10px;
+  border: 1px solid rgba(255, 255, 255, 0.18);
+}
+
+.boxes-wrapper {
+  display: grid;
+  grid-template-columns: repeat(1, 1fr);
+  align-items: center;
+  justify-content: center;
+  gap: 1rem;
+  padding: 3rem;
+  width: 100%;
+}
+
+.boxes-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  gap: 1rem;
+  background-color: var(--container-color);
+  padding: 1rem;
+  height: 23rem;
+  width: 18rem;
+  border-radius: 5%;
+}
+.boxes-container .image img {
+  width: 10rem;
+  border-radius: 5%;
+  /* height: 10rem; */
+}
+.box-data {
+  display: flex;
+  align-items: center;
+  /* justify-content: ; */
+  text-align: center;
+  gap: 1.5rem;
+  flex-direction: column;
+}
+.box-data h2 {
+  font-size: 20px;
+}
+.box-data p {
+  font-size: 15px;
+}
+.boxes-btn {
+  /* width: 10rem; */
+  margin-top: 1rem;
 }
 
 /* ------------------------------------Popular------------------------------------------------ */
@@ -992,10 +1067,17 @@ body.dark-theme {
   bottom: 8rem;
 }
 
+.footer-img {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 0.5rem;
+}
+
 .logo-img {
   width: 10rem;
-  height: 10rem;
-  border-radius: 20%;
+  height: 5rem;
+  border-radius: 5%;
 }
 
 /* ----------------------------------------------Breakpoints--------------------------- */
@@ -1138,9 +1220,7 @@ body.dark-theme {
   .nav__link i {
     display: none;
   }
-  .nav__button {
-    display: inline-block;
-  }
+
   .active-link {
     background: none;
     box-shadow: none;
@@ -1296,6 +1376,30 @@ body.dark-theme {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     gap: 2rem;
+  }
+
+  .boxes {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: auto;
+    width: 55%;
+    margin-top: 5rem;
+    background: rgba(255, 255, 255, 0.25);
+    box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+    backdrop-filter: blur(11px);
+    -webkit-backdrop-filter: blur(11px);
+    border-radius: 10px;
+    border: 1px solid rgba(255, 255, 255, 0.18);
+  }
+
+  .boxes-wrapper {
+    grid-template-columns: repeat(3, 1fr);
+    align-items: center;
+    justify-content: center;
+    gap: 3rem;
+    padding: 3rem;
+    width: 100%;
   }
 }
 
