--- a/certifacites.css
+++ b/certifacites.css
@@ -12,7 +12,21 @@ body {
   justify-content: center;
   min-height: 100vh;
   padding: 10px;
+  background-color: white;
+  color: black;
+  transition: background-color 0.3s ease, color 0.3s ease;
 }
+body.dark-theme {
+  background-color: black;
+  color: white;
+}
+
+.nav.container {
+  transition: background-color 0.3s ease;
+}
+/* .dark-theme .nav.container {
+  background-color: #333;
+} */
 
 .wrapper {
   max-width: 1100px;
@@ -29,6 +43,7 @@ body {
   width: 100%;
   vertical-align: middle;
   transition: all 0.3s ease;
+  cursor: pointer;
 }
 /* .gallery .image:hover img {
   transform: scale(1.1);
@@ -52,6 +67,9 @@ body {
   box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.2);
   opacity: 0;
   pointer-events: none;
+}
+.dark-theme .preview__box {
+  background-color: black;
 }
 .preview__box .details {
   display: flex;
