--- a/employes.css
+++ b/employes.css
@@ -47,6 +47,14 @@
   text-align: center;
 }
 
+.team-details2 img {
+  width: 10rem;
+  height: 10rem;
+  border-radius: 50%;
+  object-fit: cover;
+  object-position: center;
+}
+
 @media (max-width: 450px) {
   .ceo-img {
     width: 20rem;
@@ -59,7 +67,7 @@
 
   .md-img {
     width: 17rem;
-    height: 20rem;
+    height: 30rem;
     border-radius: 50%;
     margin-bottom: -5rem;
     object-position: top;
