--- a/employes.css
+++ b/employes.css
@@ -52,7 +52,7 @@
   height: 10rem;
   border-radius: 50%;
   object-fit: cover;
-  object-position: center;
+  object-position: top;
 }
 
 @media (max-width: 450px) {
